--- a/pets-front/src/styles.scss
+++ b/pets-front/src/styles.scss
@@ -1,4 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+.w-full {
+  width: 100%;
+}
+
+.flex-between-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.m-r-16 {
+  margin-right: 16px;
+}
+
+.m-l-16 {
+  margin-left: 16px;
+}
+
+.m-t-16 {
+  margin-top: 16px;
+}
+
+.m-r-16 {
+  margin-bottom: 16px;
+}
