--- a/pets-front/src/shared/components/header/header.component.scss
+++ b/pets-front/src/shared/components/header/header.component.scss
@@ -1,7 +1,7 @@
 @import "src/assets/scss/variables";
 
 .header-wrapper {
-  height: $header-height;
+  max-height: $header-height;
   display: flex;
   padding: 4px 16px;
   background-color: $header-background-color;
@@ -18,7 +18,7 @@
 }
 
 .logo {
-  font-size: 24px;
+  //font-size: 18px;
   font-weight: bold;
   letter-spacing: 2px;
 }
