--- a/pets-front/src/assets/scss/variables.scss
+++ b/pets-front/src/assets/scss/variables.scss
@@ -3,3 +3,5 @@ $page-side-padding: 16px;
 $default-margin: 16px;
 
 $header-background-color: #9c27b0;
+$body-background-color: #424242;
+$body-text-color: #fff;
