--- a/pets-front/src/styles.scss
+++ b/pets-front/src/styles.scss
@@ -1,3 +1,5 @@
+@import "src/assets/scss/variables";
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
@@ -5,8 +7,15 @@ html, body {
 }
 
 body {
+  //background-color: $body-background-color;
+  //color: $body-text-color;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.invert-colors {
+  color: $body-background-color;
+  background-color: $body-text-color;
 }
 
 
@@ -17,6 +26,12 @@ body {
 .flex-between-center {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.flex-center-center {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
