--- a/pets-front/src/assets/scss/variables.scss
+++ b/pets-front/src/assets/scss/variables.scss
@@ -2,6 +2,6 @@ $header-height: 56px;
 $page-side-padding: 16px;
 $default-margin: 16px;
 
-$header-background-color: #9c27b0;
+$primary-blue: #1976D2;
 $body-background-color: #424242;
 $body-text-color: #fff;
