--- a/pets-front/src/shared/components/header/header.component.scss
+++ b/pets-front/src/shared/components/header/header.component.scss
@@ -8,7 +8,7 @@
   max-height: $header-height;
   height: $header-height;
   display: flex;
-  background-color: $header-background-color;
+  background-color: $primary-blue;
   box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
   color: white;
 }
