--- a/pets-front/src/styles.scss
+++ b/pets-front/src/styles.scss
@@ -1,3 +1,4 @@
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import "src/assets/scss/variables";
 
 /* You can add global styles to this file, and also import other style files */
@@ -31,6 +32,13 @@ body {
 
 .flex-center-center {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-column-center{
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
