--- a/pets-front/src/login/login.component.html
+++ b/pets-front/src/login/login.component.html
@@ -78,5 +78,6 @@
     </mat-card-content>
 
   </mat-card>
-<button (click)="test()">t</button>
+<button (click)="test()">refresh</button>
+<button (click)="test2()">users</button>
 </div>
